# manage_products_mp

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
app/: logger.py  main.py
app/backend/: EXAMPLE_env  config.py  db.py  db_depents.py
app/migrations/: env.py
app/migrations/versions/: 0f42ac065daf_add_round_in_product_model_field_price.py  1b14362e0c3d_change_user_model_field_username.py  4de301414048_change_category_model_parent_id_and_.py  4e3bf0e76b30_add_ondelete_cascade.py  6622ed05f830_add_round_in_product_model_field_price.py  80ceaac0ca19_initial_migrations.py  824c973a874d_change_user_model_field_username.py  cfc21b2ff2e4_add_fields_for_user_model.py
app/models/: __init__.py  category.py  orders.py  product.py  user.py
app/routers/: auth.py  categories.py  products.py  user.py
app/schemas/: category.py  product.py  user.py
app/services/: auth.py
app/services/dao/: base.py  category.py  product.py  user.py
app/tests/: conftest.py
app/tests/fixtures/: mock_categories.json  mock_products.json  mock_users.json
app/tests/integration_tests/test_categories/: test_categories_api.py  test_categories_dao.py  test_dao.py
app/tests/integration_tests/test_products/: test_integrat_product_api.py
app/tests/integration_tests/test_users/: test_api.py  test_users_api.py
app/tests/unit_tests/test_users/: api_test.py  test_api.py  test_dao.py
app/tests/unit_tests/tests_category/: test_cat_dao.py
app/tests/unit_tests/tests_product/: test_prod_dao.py
app/tests/unit_tests/tests_users/: test_dao.py
