[tool.poetry]
name = "manage-products-mp"
version = "0.1.0"
description = ""
authors = ["sedm1n <4310481@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-slugify = "^8.0.4"
uvicorn = "^0.32.0"
python-jwt = "^4.1.0"
python-multipart = "^0.0.12"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
